--- a/project.json
+++ b/project.json
@@ -14,7 +14,7 @@
             "php71u-pecl-apcu",
             "php71u-pecl-redis",
             "php71u-pdo",
-            "curl <= 7.29.0-51",
+            "curl <= 7.29.0-51.el7",
             "awslogs",
             "dial-agent"
         ],
